--- a/StackOverflowClone/StackOverflowClone/Views/Shared/_Layout.cshtml
+++ b/StackOverflowClone/StackOverflowClone/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -21,10 +21,22 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Questions", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Jobs", "About", "Home")</li>
+                    <li>@Html.ActionLink("Documentation", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Tags", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Users", "Contact", "Home")</li>
                 </ul>
+                <div class="col-sm-3 col-md-3">
+                    <form class="navbar-form" role="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search" name="q">
+                            <div class="input-group-btn">
+                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
