--- a/StackOverflowClone/StackOverflowClone/Views/Shared/_Layout.cshtml
+++ b/StackOverflowClone/StackOverflowClone/Views/Shared/_Layout.cshtml
@@ -17,7 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="@Url.Action("Index", "Home")" class="navbar-brand pull-left" title="PAHStackOverflow" alt="additional title" height=40 width=250 >
+                    
+                    <img src="~/Content/Images/StackOverflowLogo.GIF" />
+                </a>
+                @Html.ActionLink( "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
